# ticket2pr

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml  setup.py
.github/workflows/: publish-python-package.yml
config/: config.example.toml
src/: branch_creator.py  cli.py  console_utils.py  enhanced_git.py  exceptions.py  logging_setup.py  main.py  pr_content.py  pre_commit_runner.py  settings.py  settings_init.py  validators.py  workflow.py
src/agents/: base.py  commit_message.py  pr_content.py  pr_generator.py  pre_commit_fixer.py  tests_agents.py  ticket_solver.py
src/clients/: anthropic_client.py  github_client.py  jira_client.py
src/shell/: base.py  claude_auth_status.py  pre_commit_runner.py
